<resources>
    <string name="app_name">Mecanica</string>
    <string name="title">Car Blue</string>
    <string name="Usuario">Usuario</string>
    <string name="Senha">Senha</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concluir">Concluir</string>
    <string name="cod">Cod</string>
    <string name="pe_a">Peça</string>
    <string name="pe_as">Peças</string>
    <string name="quantidade">quantidade</string>
    <string name="valor">Valor</string>
    <string name="buscar">Buscar</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
</resources>