<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:paddingTop="40dp"
            android:src="@drawable/captura_de_tela_2023_11_24_220937" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonte"
            android:paddingTop="30dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#1869E2"
            android:textSize="60sp" />


        <EditText
            android:id="@+id/editText1"
            android:layout_width="266dp"
            android:layout_height="54dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edittext_rounded_bg"
            android:hint="@string/Usuario"
            android:inputType="text"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="263dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_rounded_bg"
            android:hint="@string/Senha"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/arround"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/registebutton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/arround"
            android:text="@string/register"
            android:textColor="@color/white" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>