<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <!-- Primeiro LinearLayout -->
        <LinearLayout
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:paddingTop="15dp"
                android:src="@drawable/captura_de_tela_2023_11_24_220937" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/fonte"
                android:gravity="center_vertical"
                android:paddingTop="30dp"
                android:text="@string/title"
                android:textColor="#1869E2"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="604dp"
            android:orientation="vertical"
            android:layout_marginBottom="60dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:background="@drawable/addpe_as"
                android:layout_margin="20dp"
                android:orientation="vertical"

                >

                <EditText
                    android:id="@+id/Cod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="13dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/cod"

                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/peca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="13dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/pe_as"

                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/quantidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="13dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/quantidade"
                    android:minHeight="48dp"

                    android:padding="10dp" />

                <EditText
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="13dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/valor"
                    android:minHeight="48dp"

                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/concluir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/concluir"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="80dp"

                    android:background="@drawable/arredondarbotao"
                    android:backgroundTint="@color/button"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:backgroundTint="@color/button"
                app:itemIconTint="@color/white"
                app:menu="@menu/bottom_navigation_menu" />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>