<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- Primeiro LinearLayout -->
        <LinearLayout
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:paddingTop="15dp"
                android:src="@drawable/captura_de_tela_2023_11_24_220937" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/fonte"
                android:gravity="center_vertical"
                android:paddingTop="30dp"
                android:text="@string/title"
                android:textColor="#1869E2"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="703dp"
            android:layout_marginTop="30dp"
            android:gravity="center|top"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TableLayout
                    android:id="@+id/userTable"
                    android:layout_width="391dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/borda_tabela_usuarios"
                    android:padding="3dp"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="match_parent"
                        >

                        <EditText
                            android:id="@+id/modelo"
                            android:layout_width="112dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/modelo" />

                        <EditText
                            android:id="@+id/placa"
                            android:layout_width="153dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:ems="10"
                            android:inputType="text"
                            android:text="@string/placa" />

                        <EditText
                            android:id="@+id/ano"
                            android:layout_width="113dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:background="@android:color/transparent"
                            android:text="ano" />
                    </TableRow>

                    <!-- Adicione mais TableRow conforme necessário -->

                </TableLayout>
            </ScrollView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                app:backgroundTint="@color/button"
                app:itemIconTint="@color/white"
                app:menu="@menu/bottom_navigation_menu" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>